--- a/exampleSite/config/_default/config.toml
+++ b/exampleSite/config/_default/config.toml
@@ -1,6 +1,6 @@
 ######################## default configuration ####################
 baseURL = "https://demo.statichunt.com/geeky-hugo/"
-title = "Jane | Blogspot"
+title = "Ava | Blogspot"
 theme = "geeky-hugo"
 languageName = "En"
 languageCode = "en-us"
